# smart-query-router

./: .gitignore  PROJECT_STRUCTURE.md  README-3.md  README.md  chat.py  config.py  diagnostic.py  example_usage.py  factuality.py  main.py  pyproject.toml  requirements.txt  smart_query_router.py  test_router.py
