[project]
name = "smart-query-router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.20.0",
    "bitsandbytes>=0.39.0",
    "datasets>=4.4.1",
    "matplotlib>=3.10.7",
    "numpy>=1.24.0",
    "openai==0.27.6",
    "peft>=0.4.0",
    "protobuf>=6.33.1",
    "qwen>=0.1.1",
    "safetensors>=0.3.0",
    "sentence-transformers>=2.2.0",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
    "wikipedia>=1.4.0",
]
